[package]
name = "sing-quic"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "QUIC protocol implementations for sing-box-rs"

[dependencies]
bytes = "1"
futures = "0.3"
h3 = { path = "vendor/h3" }
h3-quinn = { path = "vendor/h3-quinn" }
http = "1"
quinn = { version = "0.12", default-features = false, features = ["runtime-tokio", "rustls", "ring", "jls"] }
quinn-proto = { version = "0.12", default-features = false, features = ["jls"] }
rand = "0.8"
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
webpki-roots = "1"

[patch.crates-io]
quinn = { path = "../quinn/quinn" }
quinn-proto = { path = "../quinn/quinn-proto" }
quinn-udp = { path = "../quinn/quinn-udp" }
rustls = { path = "../rustls/rustls" }
